# EKAT

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  cacts.yaml  ekat_config.h.in
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  ekat_lin_interp.hpp  ekat_lin_interp_impl.hpp  ekat_reduction_utils.hpp  ekat_tridiag.hpp
src/catch-main/: CMakeLists.txt  ekat_catch_main.cpp
src/core/: CMakeLists.txt  ekat.hpp  ekat_arch.cpp  ekat_arch.hpp  ekat_assert.hpp  ekat_comm.cpp  ekat_comm.hpp  ekat_comm_serial.cpp  ekat_factory.hpp  ekat_fpe.cpp  ekat_fpe.hpp  ekat_parameter_list.cpp  ekat_parameter_list.hpp  ekat_rational_constant.hpp  ekat_scalar_traits.hpp  ekat_scaling_factor.hpp  ekat_std_any.hpp  ekat_std_enable_shared_from_this.hpp  ekat_std_type_traits.hpp  ekat_string_utils.cpp  ekat_string_utils.hpp  ekat_test_utils.hpp  ekat_type_traits.hpp  ekat_units.hpp  ekat_zip.hpp
src/ekat/: CMakeLists.txt  ekat.hpp  ekat_assert.cpp  ekat_assert.hpp  ekat_config.h.in  ekat_macros.hpp  ekat_pack.hpp  ekat_pack_kokkos.hpp  ekat_pack_math.hpp  ekat_pack_utils.hpp  ekat_parameter_list.cpp  ekat_parameter_list.hpp  ekat_parse_yaml_file.cpp  ekat_parse_yaml_file.hpp  ekat_physical_constants.hpp  ekat_scalar_traits.hpp  ekat_session.cpp  ekat_session.hpp  ekat_type_traits.hpp  ekat_types.hpp  ekat_universal_constants.hpp  ekat_workspace.hpp  ekat_workspace_impl.hpp
src/ekat/io/: ekat_array_io.cpp  ekat_yaml.cpp  ekat_yaml.hpp
src/ekat/kokkos/: ekat_kokkos_meta.hpp  ekat_kokkos_types.hpp  ekat_kokkos_utils.hpp  ekat_subview_utils.hpp
src/ekat/logging/: ekat_log_file.hpp  ekat_log_file_policy.hpp  ekat_log_mpi.hpp  ekat_log_mpi_policy.hpp  ekat_log_output.hpp  ekat_logger.hpp
src/ekat/mpi/: CMakeLists.txt  ekat_comm.cpp  ekat_comm.hpp  ekat_comm_serial.cpp
src/ekat/physics/: base_constants.cpp  base_constants.f90  base_constants.hpp  constants.hpp  constants.yaml  constants_generator.cpp  constants_generator.hpp  generate_constants_main.cpp.in
src/ekat/simd/: ekat_simd_utils.hpp
src/ekat/std_meta/: ekat_std_any.hpp  ekat_std_enable_shared_from_this.hpp  ekat_std_map_key_iterator.hpp  ekat_std_type_traits.hpp  ekat_std_utils.hpp
src/ekat/util/: ekat_arch.cpp  ekat_arch.hpp  ekat_array_io.cpp  ekat_array_io_mod.f90  (+34 more)
src/expression/: CMakeLists.txt  ekat_expression.hpp  ekat_expression_assignment_op.hpp  ekat_expression_base.hpp  ekat_expression_binary_op.hpp  ekat_expression_binary_predicate.hpp  ekat_expression_compare.hpp  ekat_expression_conditional.hpp  ekat_expression_contraction.hpp  ekat_expression_eval.hpp  ekat_expression_helpers.hpp  ekat_expression_math.hpp  ekat_expression_meta.hpp  ekat_expression_reduce.hpp  ekat_expression_scalar.hpp  ekat_expression_traits.hpp  ekat_expression_view.hpp
src/kokkos/: CMakeLists.txt  ekat_kernel_assert.hpp  ekat_kokkos_meta.hpp  ekat_kokkos_session.cpp  ekat_kokkos_session.hpp  ekat_kokkos_str_utils.hpp  ekat_kokkos_types.hpp  ekat_math_utils.hpp  ekat_md_range.hpp  ekat_subview_utils.hpp  ekat_team_policy_utils.hpp  ekat_upper_bound.hpp  ekat_view_broadcast.hpp  ekat_view_utils.hpp  ekat_where.hpp  ekat_workspace.hpp  ekat_workspace_impl.hpp
src/logging/: CMakeLists.txt  ekat_log_mpi_policy.hpp  ekat_logger.hpp
src/mpi/: CMakeLists.txt
src/pack/: CMakeLists.txt  ekat_pack.hpp  ekat_pack_kokkos.hpp  ekat_pack_macros.hpp  ekat_pack_math.hpp  ekat_pack_utils.hpp  ekat_pack_where.hpp
src/parser/: CMakeLists.txt  ekat_yaml.cpp  ekat_yaml.hpp
src/test-utils/: CMakeLists.txt  ekat_catch_main.cpp  ekat_test_utils.cpp
src/testing-support/: CMakeLists.txt  ekat_catch_main.cpp  ekat_test_session.cpp  ekat_testing_support.hpp.in
src/units/: CMakeLists.txt  ekat_rational_constant.hpp
src/utils/: CMakeLists.txt  ekat_std_map_key_iterator.hpp  ekat_std_utils.hpp
src/yaml/: CMakeLists.txt
tests/: CMakeLists.txt  ekat_test_config.h.in
tests/algorithm/: CMakeLists.txt  lin_interp_ref.F90  lin_interp_ref.f90  lin_interp_test.cpp  reduction_tests.cpp  tridiag_bfb.cpp  tridiag_bfb_mod.F90  tridiag_tests.cpp  tridiag_tests.hpp  tridiag_tests_correctness.cpp  tridiag_tests_performance.cpp
tests/core/: CMakeLists.txt  assert_tests.cpp  catch_main_tests.cpp  comm.cpp  debug_tools_tests.cpp  factory.cpp  fpe_check.cpp  meta_utils.cpp  parameter_list.cpp  regress_fail.cpp  std_meta.cpp  type_traits_utils.cpp  units.cpp  zip.cpp
tests/expression/: CMakeLists.txt  assignment_expressions.cpp  expressions.cpp  packed_expressions.cpp  range_expressions.cpp
tests/io/: CMakeLists.txt  array_io_tests.cpp  array_io_tests.f90  input.yaml  yaml_parser.cpp
tests/kokkos/: CMakeLists.txt  kernel_on_host.cpp  kokkos_utils_tests.cpp  math_utils.cpp  subview_utils.cpp  team_policy_utils.cpp  upper_bound.cpp  view_broadcast.cpp  view_utils.cpp  where.cpp  workspace_mgr.cpp  workspace_tests.cpp
tests/logging/: CMakeLists.txt  console_only_log_tests.cpp  logger_tests.cpp  mpi_file_log_tests.cpp  mpi_log_all_ranks.cpp  mpi_log_rank0_only.cpp  mpi_log_tests.cpp  mpi_logger_tests.cpp  multiple_log_example.cpp  serial_file_log_tests.cpp
tests/mpi/: CMakeLists.txt  comm.cpp  comm.vvt
tests/pack/: CMakeLists.txt  pack.cpp  pack_kokkos_tests.cpp  pack_kokkos_utils.cpp  pack_tests.cpp  pack_utils.cpp  pack_utils_tests.cpp  pack_where.cpp  perf_check.cpp  unmanaged.cpp
tests/parser/: CMakeLists.txt  input.yaml  yaml_parser.cpp
tests/physics/: CMakeLists.txt  constants_tests.cpp  constants_tests.f90  read_constants_tests.cpp
tests/test-utils/: CMakeLists.txt
tests/units/: CMakeLists.txt  physical_constants.cpp  units.cpp
tests/utils/: CMakeLists.txt  assert_tests.cpp  catch_main_tests.cpp  cuda_rdc.F90  cuda_rdc.cpp  cuda_rdc_kernel.cpp  cuda_rdc_kernel.hpp  debug_tools_tests.cpp  factory.cpp  kernel_assert.cpp  math_util_tests.cpp  meta_utils.cpp  regress_fail.cpp  std_meta.cpp  string_utils.cpp  string_utils_tests.cpp  upper_bound_test.cpp  util_tests.cpp
tests/yaml/: yaml_parser.cpp
valgrind_support/: CMakeLists.txt  catch_test.cpp  gen_sup.sh  mpi.cxx  mpi.f90  mpi_catch_test.cpp  mpi_hw.cxx  serial.cxx
(+97 files in other folders)
